# TeamOS

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TeamOS-PRD.docx  bandit_report.json  implementation_plan.md  locust_results_failures.csv  locust_results_stats.csv  locust_results_stats_history.csv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  powershell.bat  task.md  tsconfig.base.json  validation_report.json
apps/ai-engine/: README.md  pyproject.toml
apps/ai-engine/agents/: browser_agent.py  competitor_agent.py  duplicate_agent.py  graph_builder.py  monitoring_agent.py  planner.py  recommendation_agent.py  search_agent.py  sprint_manager.py  summarizer.py
apps/backend/: API.md  Dockerfile  pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py  ai.py  analytics.py  context.py  members.py  notifications.py  progress.py  tasks.py  timeline.py  websocket.py  workspace.py
apps/backend/app/core/: __init__.py  auth.py  store.py
apps/backend/app/db/: __init__.py
apps/backend/app/middleware/: __init__.py
apps/backend/app/models/: __init__.py
apps/backend/app/schemas/: __init__.py  ai.py  context.py  member.py  task.py  workspace.py
apps/backend/app/services/: ai_engine_client.py  browser_service.py  context_service.py  duplicate_service.py  graph_service.py  hydra_service.py  notification_service.py  progress_service.py  task_service.py  timeline_service.py  wla_service.py  workspace_service.py
apps/backend/app/websocket/: __init__.py
apps/backend/teamos_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/backend/tests/: test_main.py
docs/: AGENT.md  ARCHITECTURE.md  TEAMOS-PRD.md  (+3 more)
(+35 files in other folders)
