[project]
name = "teamos-ai-engine"
version = "0.1.0"
description = "AI engine microservice for TeamOS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
]
browser = [
    "browser-use>=0.2.0",
]
