[project]
name = "teamos-backend"
version = "0.1.0"
description = "FastAPI backend for TeamOS"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.dependencies]
fastapi = "^0.116.0"
uvicorn = "^0.23.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg[binary] = "^3.5.0"
redis = "^5.3.0"
python-dotenv = "^1.0.0"

[project.scripts]
start = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
