[project]
name = "teamos-backend"
version = "0.1.0"
description = "FastAPI backend for TeamOS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.3.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
llm = [
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
]
browser = [
    "browser-use>=0.2.0",
]

[project.scripts]
start = "app.main:start"


